Fixed letter spacing in letterhead.

--- a/templates/monospace/monospace.css
+++ b/templates/monospace/monospace.css
@@ -129,6 +129,7 @@ hr {
   font-size: 24pt;
   font-weight: 700;
   margin-bottom: 0.1cm;
+  letter-spacing: 20pt;
 }
 
 #candidate-descriptor {
